idea/testData/debugger/sequence/psi/streams/positive/Simple.kt
import java.util.stream.Stream

fun main(args: Array<String>) {
  Stream.of(1, 2, 3).toAr<caret>ray()
}
